--- a/app.css
+++ b/app.css
@@ -316,6 +316,7 @@ label {
 
 input[type="text"],
 input[type="number"],
+input[type="password"],
 select {
     width: 100%;
     background: white;
